--- a/lab_5/filter.html
+++ b/lab_5/filter.html
@@ -72,31 +72,31 @@
             Фильтр blur:
             <div class="filter"><input type="range" min="0" max="20" value="0" onchange="blurChange()" id="blurValue">
                 <span id="blurOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="invertImage"></div>
+            <div><img src="monk.jpeg" id="invertImage"></div>
             Инвертирование цвета:
             <div class="filter"><input type="range" min="0" max="100" value="0" onchange="invert()" id="invertValue">
                 <span id="invertOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="saturateImage"></div>
+            <div><img src="monk.jpeg" id="saturateImage"></div>
             Фильтр насыщенности цвета:
             <div class="filter"><input type="range" min="0" max="500" value="100" onchange="saturate()" id="saturateValue">
                 <span id="saturateOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="sepiaImage"></div>
+            <div><img src="monk.jpeg" id="sepiaImage"></div>
             Фильтр сепия(Эффект старой фотографии)
             <div class="filter"><input type="range" min="0" max="100" value="0" onchange="sepia()" id="sepiaValue">
                 <span id="sepiaOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="brightnessImage"></div>
+            <div><img src="monk.jpeg" id="brightnessImage"></div>
             Фильтр яркость:
                 <div class="filter"><input type="range" min="0" max="500" value="100" onchange="brightness()" id="brightnessValue">
                 <span id="brightnessOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="contrastImage"></div>
+            <div><img src="monk.jpeg" id="contrastImage"></div>
             Фильтр контраст:
                 <div class="filter"><input type="range" min="0" max="500" value="100" onchange="contrast()" id="contrastValue">
                 <span id="contrastOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="grayscaleImage"></div>
+            <div><img src="monk.jpeg" id="grayscaleImage"></div>
             Фильтр оттенки серого:
                 <div class="filter"><input type="range" min="0" max="100" value="0" onchange="grayscale()" id="grayscaleValue">
                 <span id="grayscaleOutput"></span></div>
-            <div><img src="C:\Sveta-Barashkova\front-labs\lab_5\monk.jpeg" id="huerotateImage"></div>
+            <div><img src="monk.jpeg" id="huerotateImage"></div>
             Фильтр оттенок цвета:
                 <div class="filter"><input type="range" min="0" max="360" value="0" onchange="huerotate()" id="huerotateValue">
                 <span id="huerotateOutput"></span></div>
