--- a/lab_6/filter.html
+++ b/lab_6/filter.html
@@ -13,38 +13,38 @@
             let wear = document.getElementById('wear');
 
             if(color == 'Красная' && type == 'Футболка') {
-                wear.src = 'C:\Sveta-Barashkova\front-labs\lab_6\pictures\краснаяфутболка.jpeg';
+                wear.src = 'pictures\краснаяфутболка.jpeg';
             }
 
             else if(color == 'Белая' && type == 'Футболка') {
-                wear.src = 'front-labs\lab_6\pictures\белаяфутболка.jpeg';
+                wear.src = 'pictures\белаяфутболка.jpeg';
             }
 
             else if(color == 'Черная' && type == 'Футболка') {
-                wear.src = 'front-labs\lab_6\pictures\чернаяфутболка.jpeg';
+                wear.src = 'pictures\чернаяфутболка.jpeg';
             }
 
             else if(color == 'Красное' && type == 'Поло') {
-                wear.src = 'front-labs\lab_6\pictures\красноеполо.jpeg';
+                wear.src = 'pictures\красноеполо.jpeg';
             }
 
              else if(color == 'Белое' && type == 'Поло') {
-                wear.src = 'front-labs\lab_6\pictures\белоеполо.jpeg';
+                wear.src = 'pictures\белоеполо.jpeg';
             }
 
             else if(color == 'Черное' && type == 'Поло') {
-                wear.src = 'front-labs\lab_6\pictures\черноеполо.jpeg';
+                wear.src = 'pictures\черноеполо.jpeg';
             }
 
             else if(color == 'Красная' && type == 'Майка') {
-                wear.src = 'front-labs\lab_6\pictures\краснаямайка.jpeg';
+                wear.src = 'pictures\краснаямайка.jpeg';
             }
             else if(color == 'Белая' && type == 'Майка') {
-                wear.src = 'C:\Sveta-Barashkova\front-labs\lab_6\белаямайка.jpeg';
+                wear.src = 'pictures\белаямайка.jpeg';
             }
             else {
                 (color == 'Черная' && type == 'Майка') 
-                wear.src = 'front-labs\lab_6\pictures\чернаямайка.jpeg';
+                wear.src = 'pictures\чернаямайка.jpeg';
             }
         }
     </script>
