--- a/lab_6/filter.html
+++ b/lab_6/filter.html
@@ -13,38 +13,38 @@
             let wear = document.getElementById('wear');
 
             if(color == 'Красная' && type == 'Футболка') {
-                wear.src = 'pictures\краснаяфутболка.jpeg';
+                wear.src = 'краснаяфутболка.jpeg';
             }
 
             else if(color == 'Белая' && type == 'Футболка') {
-                wear.src = 'pictures\белаяфутболка.jpeg';
+                wear.src = 'белаяфутболка.jpeg';
             }
 
             else if(color == 'Черная' && type == 'Футболка') {
-                wear.src = 'pictures\чернаяфутболка.jpeg';
+                wear.src = 'чернаяфутболка.jpeg';
             }
 
             else if(color == 'Красное' && type == 'Поло') {
-                wear.src = 'pictures\красноеполо.jpeg';
+                wear.src = 'красноеполо.jpeg';
             }
 
              else if(color == 'Белое' && type == 'Поло') {
-                wear.src = 'pictures\белоеполо.jpeg';
+                wear.src = 'белоеполо.jpeg';
             }
 
             else if(color == 'Черное' && type == 'Поло') {
-                wear.src = 'pictures\черноеполо.jpeg';
+                wear.src = 'черноеполо.jpeg';
             }
 
             else if(color == 'Красная' && type == 'Майка') {
-                wear.src = 'pictures\краснаямайка.jpeg';
+                wear.src = 'краснаямайка.jpeg';
             }
             else if(color == 'Белая' && type == 'Майка') {
-                wear.src = 'pictures\белаямайка.jpeg';
+                wear.src = 'белаямайка.jpeg';
             }
             else {
                 (color == 'Черная' && type == 'Майка') 
-                wear.src = 'pictures\чернаямайка.jpeg';
+                wear.src = 'чернаямайка.jpeg';
             }
         }
     </script>
