--- a/lab_8/lab8.html
+++ b/lab_8/lab8.html
@@ -26,7 +26,7 @@
         </li>
 
         <li>
-            <a href="clock.html" style="text-decoration: none;">Аналоговые часы</a>
+            <a href="time2.html" style="text-decoration: none;">Аналоговые часы</a>
         </li>
     </main>
 
